--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Привет мир!</title>
+    <title>Zhoporukiy BIO</title>
   </head>
   <body>
-    <h1>Привет мир!</h1>
+    <h1>Hello World!</h1>
 
     <!-- Дополнительный JavaScript; выберите один из двух! -->
 
